@@ -61,6 +61,7 @@
 		{
 			Assert::isBoolean($really);
 			$this->followLocation = $really;
+			return $this;
 		}
 		
 		public function isFollowLocation()
@@ -101,8 +102,12 @@
 		 */
 		public function send(HttpRequest $request)
 		{
-			// TODO: support more methods
-			Assert::isTrue($request->getMethod()->getId() == HttpMethod::GET);
+			Assert::isTrue(
+				in_array(
+					$request->getMethod()->getId(),
+					array(HttpMethod::GET, HttpMethod::POST)
+				)
+			);
 			
 			$response = CurlHttpResponse::create()->
 				setMaxFileSize($this->maxFileSize);
@@ -121,6 +126,14 @@
 				
 			if ($this->maxRedirects !== null)
 				$options[CURLOPT_MAXREDIRS] = $this->maxRedirects;
+				
+			if ($request->getMethod()->getId() == HttpMethod::GET) {
+				// TODO: append $request->getGet() to url
+				$options[CURLOPT_HTTPGET] = true;
+			} else {
+				$options[CURLOPT_POST] = true;
+				$options[CURLOPT_POSTFIELDS] = $request->getPost();
+			}
 			
 			curl_setopt_array($this->handle, $options);
 			
